update local env

--- a/packages-ts/gauntlet-terra-contracts/networks/.env.local
+++ b/packages-ts/gauntlet-terra-contracts/networks/.env.local
@@ -1,3 +1,6 @@
 NODE_URL=http://localhost:1317
 CHAIN_ID=localterra
 DEFAULT_GAS_PRICE=1000000
+LINK=terra13mrd0njt2q5rq0nv294wgcqk9v83nuuja6wyvy
+BILLING_ACCESS_CONTROLLER=terra1gqq4k5wsvmsk3gflnpmfv6fpaxdsgsq4utyh79
+REQUESTER_ACCESS_CONTROLLER=terra1qhzkf9c8m75xyw8x773378t4cyuk8jm29maflh
