feature: upload & deploy cw4_group and cw3_flex_multisig (#83)
Instructions for uploading & deploying these 2 contracts have been added
to gauntlet-terra-contracts README.md, along with functionality.

This does not include ability to make multisig proposals and vote on
them--that will be in a separate PR.

This also includes support for downloading wasm artifacts from cwplus repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .direnv
+.vscode
 target/
+artifacts/bin/
 tarpaulin-report.html
-artifacts
 
 # TS
 node_modules
@@ -12,9 +13,7 @@ flow-report.json
 .envrc
 bin
 
-packages-ts/gauntlet-terra-contracts/artifacts/bin
-
 # test
 packages-ts/gauntlet-terra-contracts/codeIds/test*
 tests/e2e/logs
-packages-ts/gauntlet-terra-contracts/networks/.env.test*
+networks/.env.test*
