--- a/packages-ts/gauntlet-terra-contracts/networks/.env.bombay-testnet
+++ b/packages-ts/gauntlet-terra-contracts/networks/.env.bombay-testnet
@@ -1,7 +1,8 @@
 NODE_URL=https://bombay-lcd.terra.dev
 CHAIN_ID=bombay-12
 DEFAULT_GAS_PRICE=0.5
-
 LINK=terra1fcksmfjncl6m7apvpalvhwv5jxd9djv5lwyu82
 BILLING_ACCESS_CONTROLLER=terra1trcufj64y53hxk7g8cra33xw3jkyvlr9lu99eu
 REQUESTER_ACCESS_CONTROLLER=terra1s38kfu4qp0ttwxkka9zupaysefl5qruhv5rc0z
+MULTISIG_GROUP=terra183vf6ea4mk9ev6hq4rqcdraskranjjntsan3c9
+MULTISIG_WALLET=terra15v7jfl8vam590y2nnhh3wsv2ma6fa4tk3tcnu5
